--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_gym">GYM</string>
     <string name="title_running">Running</string>
     <string name="title_timer">Timer</string>
+    <string name="button_start">Start!</string>
 </resources>
